# shortcut

./: Cargo.toml  README.md
service/OpenRC/conf.d/: rproxy  shortcutd
service/OpenRC/init.d/: rproxy  shortcutd
service/SystemD/: shortcutd.service
src/: cert.rs  conn.rs  debug.rs  fetch.rs  http.rs  main.rs  request.rs  serve.rs  utility.rs
