[package]
name = "rproxy"
version = "0.1.4"
edition = "2018"
publish = false

[features]
default = []
https = ["pnet", "pnet_datalink", "rcgen", "tokio-rustls"]

[dependencies.httpdate]
version = "1"
default-features = false

[dependencies.pnet]
default-features = false
optional = true
version = "0.35.0"
features = ["std"]

[dependencies.pnet_datalink]
default-features = false
optional = true
version = "0.35.0"

[dependencies.rcgen]
default-features = false
optional = true
version = "0.13.1"
features = ["crypto", "pem", "ring"]

[dependencies.tokio]
version = "1"
default-features = false
features = [
    "fs",
    "io-util",
    "net",
    "macros",
    "rt-multi-thread",
    "sync",
    "time"
]

[dependencies.tokio-rustls]
default-features = false
version = "0.26.0"
optional = true

[profile.release]
debug = false
panic = "abort"
strip = true
opt-level = 3