[package]
name = "shortcut"
version = "0.1.8"
edition = "2018"
publish = false

[features]
https = [
    "get_if_addrs",
    "rcgen",
    "rustls",
    "rustls-native-certs",
    "tokio-rustls",
    "winapi"
]

[dependencies.httpdate]
version = "1"
default-features = false

[dependencies.get_if_addrs]
version = "0.5.3"
optional = true

[dependencies.rcgen]
default-features = false
optional = true
version = "0.13"
features = ["crypto", "pem", "ring", "x509-parser"]

[dependencies.rustls]
default-features = false
features = ["ring", "tls12"]
optional = true
version = "0.23"

[dependencies.rustls-native-certs]
default-features = false
optional = true
version = "0.8"

[dependencies.tokio]
version = "1"
default-features = false
features = [
    "fs",
    "io-util",
    "net",
    "macros",
    "rt-multi-thread",
    "sync",
    "time"
]

[dependencies.tokio-rustls]
default-features = false
features = ["ring"]
version = "0.26"
optional = true

# Platform specific dependencies
[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.9"
features = ["accctrl", "aclapi", "minwindef", "ntdef", "winbase", "winnt", "winerror"]
optional = true
default-features = false

[profile.release]
debug = false
panic = "abort"
strip = true
opt-level = 3